add option to update project status when officials make responses

--- a/app/assets/stylesheets/update.scss
+++ b/app/assets/stylesheets/update.scss
@@ -56,6 +56,12 @@ form.new_update .form-control {
 	margin: 10px 0;
 }
 
+form.new_update select.form-control {
+
+	width: 360px;
+	display: inline-block;
+	margin-left: 20px;
+}
 
 .updates-title {
 
