--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -13,30 +13,25 @@
 
     </div>
 
-  <div class="col-md-12">
-
-    <!-- <div class="project-progress">
-      <div class="project-progress-bar background-blue" style="width: <%= @percent["fulfilled"] %>%;">
-        <span> ACHIEVED <%= @percent["fulfilled"] %> % </span> </div>
-    </div>
+  <div class="col-md-12 project-charts">
 
     <div class="project-progress">
+
+      <div class="project-progress-bar background-green" style="width: <%= @percent["fulfilled"] %>%;">
+        <%= link_to '', projects_path(:status => "Fulfilled"), title: 'See Fulfilled Promises', rel: 'tooltip', class: "project-progress-link" %> </div>
+
       <div class="project-progress-bar background-blue"  style="width: <%= @percent["blocked"] %>%;">
-        <span>PARTIALLY FULFILLED <%= @percent["blocked"] %> %</span>
-      </div>
+        <%= link_to '', projects_path(:status => "Partially Fulfilled"), title: 'See Partially Fulfilled Promises', rel: 'tooltip', class: "project-progress-link" %> </div>
+
+      <div class="project-progress-bar background-yellow" style="width: <%= @percent["initiated"] %>%;">
+        <%= link_to '', projects_path(:status => "In Progress"), title: 'See In Progress Promises', rel: 'tooltip', class: "project-progress-link" %> </div>
+
+      <div class="project-progress-bar background-red"  style="width: <%= @percent["uninitiated"] %>%;">
+        <%= link_to '', projects_path(:status => "Not Started"), title: 'See Not Started Promises', rel: 'tooltip', class: "project-progress-link" %> </div>
+
     </div>
 
-    <div class="project-progress">
-      <div class="project-progress-bar background-blue" style="width: <%= @percent["initiated"] %>%;">
-        <span>IN PROGRESS <%= @percent["initiated"] %> %</span>
-      </div>
-    </div>
-
-    <div class="project-progress">
-      <div class="project-progress-bar background-blue"  style="width: <%= @percent["uninitiated"] %>%;">
-        <span>NOT STARTED <%= @percent["uninitiated"] %> %</span>
-      </div>
-    </div> -->
+    <!-- <%= line_chart @data, @options %> -->
 
   </div>
 
