remove redundent go back links on projects list page

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -52,7 +52,7 @@
 
     <% end %>
 
-    <% if @projects.count < 70 %>
+    <% if @projects.count < 70 && @projects.count > 0 %>
 
       <div class="row project-row">
 
