--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -15,6 +15,8 @@
 
   <div class="col-md-12 project-charts">
 
+    <%= line_chart @data, @options %>
+
     <div class="project-progress">
 
       <div class="project-progress-bar background-green" style="width: <%= @percent["fulfilled"] %>%;">
@@ -30,8 +32,6 @@
         <%= link_to '', projects_path(:status => "Not Started"), title: 'See Not Started Promises', rel: 'tooltip', class: "project-progress-link" %> </div>
 
     </div>
-
-    <!-- <%= line_chart @data, @options %> -->
 
   </div>
 
