cosmetic & textual changes, suggested by kapoor

--- a/app/views/projects/landing.html.erb
+++ b/app/views/projects/landing.html.erb
@@ -16,13 +16,13 @@
         <p> Promises with Responses:
           <span> 45 / 70 </span>  </p>
 
-        <p> Official Responses:
+        <p> Responses from Officials:
           <span> 123 </span> </p>
 
-        <p> Public Responses:
+        <p> Responses from People:
           <span> 456 </span> </p>
 
-        <p> Irrelevant Responses:
+        <p> Responses marked Irrelevant:
           <span> 10845 </span> </p>
 
         <div class="links">
