--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -215,6 +215,16 @@
   margin: 10px 0;
 }
 
+.project-update.notice {
+
+  background: antiquewhite;
+  padding: 10px 20px;
+  border-radius: 5px;
+  position: relative;
+  left: -20px;
+  top: -10px;
+}
+
 .project-search-row .project-message {
 
   margin: 10px 0;
