--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -50,6 +50,10 @@
 
     <div class="project-updates">
 
+        <% if flash[:notice] %>
+            <div class="project-update notice"><%= flash[:notice] %></div>
+        <% end %>
+
         <div class="project-timeline">
             <%= link_to "Add a response", { controller: "updates", action: "new", project_id: @project.id }, class: "project-update new" %> </div>
 
