show update approval, reject message

--- a/app/assets/stylesheets/update.scss
+++ b/app/assets/stylesheets/update.scss
@@ -136,3 +136,10 @@ form.new_update select.form-control {
     display: inline-block;
 }
 
+.update-notice.notice {
+
+	padding: 15px 15px;
+    background: aliceblue;
+    border-radius: 5px;
+}
+
