add srrvnn in the team

--- a/app/views/projects/landing.html.erb
+++ b/app/views/projects/landing.html.erb
@@ -53,12 +53,18 @@
 <div name="team" id="team" class="page">
   <h2 class="title">MEET THE TEAM</h2>
   <div class="container-fluid" id="team-container">
-  	<div class="team-member col-md-2 col-md-offset-1 col-lg-2 col-lg-offset-1">
+  	<div class="team-member col-md-2 col-lg-2">
   		<%=image_tag("michelle.png", alt: "Michelle Guo", class:"picture")%>
   		<div class="name">
   			<span>MICHELLE GUO</span>
   		</div>
   	</div>
+    <div class="team-member col-md-2 col-lg-2 ">
+      <%=image_tag("srrvnn2.jpg", alt: "Saravanan Ganesh", class:"picture")%>
+      <div class="name">
+        <span>SARAVANAN GANESH</span>
+      </div>
+    </div>
   	<div class="team-member col-md-2 col-lg-2">
   		<%=image_tag("cathy.png", alt: "Cathy Zhu", class:"picture")%>
   		<div class="name">
