--- a/app/assets/stylesheets/landing.scss
+++ b/app/assets/stylesheets/landing.scss
@@ -193,3 +193,16 @@
 #contact {
   padding-top: 100px;
 }
+
+.footer ul {
+    list-style: none;
+    text-align: center;
+    margin: 30px 0;
+    text-transform: uppercase;
+    font-size: 15px;
+}
+
+.footer li {
+    display: inline-block;
+    margin: 0 20px;
+}
