update about page

--- a/app/assets/stylesheets/landing.scss
+++ b/app/assets/stylesheets/landing.scss
@@ -152,7 +152,8 @@
 }
 
 .about-description {
-  width: 54em;
+  width: 60em;
+  margin-top: 20px;
   margin-left: auto;
   margin-right: auto;
   position: relative;
