add thumbs up and down to satisfaction option in public responses

--- a/app/assets/stylesheets/update.scss
+++ b/app/assets/stylesheets/update.scss
@@ -41,7 +41,7 @@ form.new_update .form-group.buttons {
 
 form.new_update .form-group label {
 
-	margin: 20px 0;
+	margin: 20px 5px;
 }
 
 form.new_update .form-group label.date-label {
