uncheat, and update name

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -11,7 +11,7 @@
 
   This Manifesto Tracker was built together by the Aam Aadmi Party, Delhi Government and Stanford University.  </p>
 
-  <p class="about-description"> Roshan Shankar &mdash; Michelle Guo &mdash; Saravanan Ganesh &mdash; Cathy Zhu &mdash; Grace Wu &mdash; Kyle Quian &mdash; Catherine Xu </p>
+  <p class="about-description"> Roshan Shankar &mdash; Michelle Guo &mdash; Saravanan Ganesh &mdash; Cathy Zhu &mdash; Grace Wu &mdash; Kyle Qian &mdash; Catherine Xu </p>
 
  </div>
 
