add proof link to respones on project, remove positive tags

--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -272,6 +272,12 @@
   position: relative;
 }
 
+.project-update .fa-proof {
+
+  margin-right: 5px;
+  vertical-align: middle;
+}
+
 
 .project-search .project-search-input {
 
