open proof in new window

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -79,7 +79,7 @@
 
                 <% if u.url.present? %>
                     <%= fa_icon "external-link", {class: "fa-proof"} %>
-                    <%= link_to "Proof", u.url%>
+                    <%= link_to "Proof", u.url, :target => "_blank"%>
                 <% end %>
 
             </div>
