--- a/app/views/projects/landing.html.erb
+++ b/app/views/projects/landing.html.erb
@@ -15,14 +15,14 @@
           <div class="col-md-12 heading">
             <p> Status of AAP's 70 promises </p> </div>
 
-          <div class="number col-md-4"> <%= @percent["fulfilled"] %> % </div>
+          <div class="number col-md-4"> <%= @percent["fulfilled"] + @percent["fulfilled"] %> % </div>
             <div class="status col-md-8"> promises fulfilled </div>
 
-          <div class="number col-md-4"> <%= @percent["blocked"] %> % </div>
-            <div class="status col-md-8"> partially fulfilled </div>
-
-          <div class="number col-md-4"> <%= @percent["initiate"] ||= 0 %> % </div>
+          <div class="number col-md-4"> <%= @percent["initiated"] ||= 0 %> % </div>
             <div class="status col-md-8"> in progress </div>
+
+          <div class="number col-md-4"> <%= @percent["uninitiated"] %> % </div>
+            <div class="status col-md-8"> to be started </div>
 
         </div>
 
