remove over the time graph on promises page

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -15,7 +15,7 @@
 
   <div class="col-md-12 project-charts">
 
-    <%= line_chart @data, @options %>
+    <!-- <%= line_chart @data, @options %> -->
 
     <div class="project-progress">
 
