--- a/app/views/updates/edit.html.erb
+++ b/app/views/updates/edit.html.erb
@@ -1,15 +1,10 @@
 <div class="container-fluid page-full">
   <%= link_to "Back", :back, class: "back-link" %>
   <h1 class="text-center">Edit Update for <%= @project.title %></h1>
-  
+
   <%= form_for @update, url: {action: 'update'} , :html=>{:method=>:put} do |f| %>
 
     <%= f.hidden_field :project_id, :value => @project.id %>
-    
-    <div class="form-group">
-      <%= label_tag(:title, "Update Title") %>
-      <%= f.text_field :title, :class => "form-control" %>
-    </div>
 
     <div class="form-group">
       <%= label_tag(:url, "URL") %>
@@ -17,10 +12,15 @@
     </div>
 
     <div class="form-group">
+      <%= label_tag(:event_occured, "Date & Time:", class: 'date-label') %>
+      <%= f.datetime_select(:event_occured, ampm: true) %> </div>
+
+    <div class="form-group">
       <%= label_tag(:description, "Update Description") %>
       <%= f.text_area :description, :class => "form-control" %>
     </div>
 
+    <%= recaptcha_tags %>
     <%= submit_tag("Save", class: "btn btn-default") %>
 
   <% end %>
