--- a/app/views/projects/landing.html.erb
+++ b/app/views/projects/landing.html.erb
@@ -16,7 +16,7 @@
             <p> Status of AAP's 70 promises </p> </div>
 
           <div class="number col-md-4"> <%= @percent["fulfilled"] + @percent["fulfilled"] %> % </div>
-            <div class="status col-md-8"> promises fulfilled </div>
+            <div class="status col-md-8"> promises kept </div>
 
           <div class="number col-md-4"> <%= @percent["initiated"] ||= 0 %> % </div>
             <div class="status col-md-8"> in progress </div>
