udpate blue color, and make status indicators broader

--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -71,7 +71,7 @@
 }
 
 .project-updates-heading .updates-sort.blue {
-  background: #68A6EE;
+  background: #61b1e0;
   color: white;
 }
 
@@ -200,7 +200,7 @@
 
 .project-status-color {
   display: inline-block;
-  width: 20px;
+  width: 40px;
   height: 20px;
   border-radius: 5px;
   line-height: 48px;
@@ -305,7 +305,7 @@
 }
 
 .blue {
-  color: #68A6EE;
+  color: #61b1e0;
 }
 
 .background-red {
@@ -321,7 +321,7 @@
 }
 
 .background-blue {
-  background-color: #67AFAD;
+  background-color: #61b1e0;
 }
 
 
