--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -63,7 +63,7 @@
         <%= @percent["initiated"].to_s + '% In Progress' %> </div>
 
       <div class="project-progress-bar project-progress-legend-item background-red" >
-        <%= @percent["uninitiated"].to_s + '% Not Started' %> </div>
+        <%= @percent["uninitiated"].to_s + '% To Be Started' %> </div>
 
     </div>
 
